Remove proxy from package.json

--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "env-cmd -f ../dev.env node backend/server.js",
-    "mongodb": "C:/Users/teodo/mongodb/bin/mongod.exe --dbpath=C:/Users/teodo/mongodb-heroes"
+    "mongodb": "C:/Users/teodo/mongodb/bin/mongod.exe --dbpath=C:/Users/teodo/mongodb-heroes",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix app && npm run build --prefix app"
   },
-  "proxy": "http://localhost:5000",
+  //uncomment if you are in development mode
+  //"proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
