--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "redux": "^4.0.5"
   },
   "scripts": {
-    "start": "node backend/server.js",
+    "start": "cd backend && node server.js",
+    "create": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "env-cmd -f ../dev.env node backend/server.js",
