--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
   },
   "scripts": {
     "start": "cd backend && node server.js",
+    "client": "cd ./ && npm start",
     "create": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "env-cmd -f ../dev.env node backend/server.js",
     "mongodb": "C:/Users/teodo/mongodb/bin/mongod.exe --dbpath=C:/Users/teodo/mongodb-heroes",
-    "heroku-postbuild": "cd ./ && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd ./ && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
