--- a/package.json
+++ b/package.json
@@ -27,14 +27,10 @@
     "redux": "^4.0.5"
   },
   "scripts": {
-    "start": "cd backend && node server.js",
-    "client": "cd ./ && npm start",
-    "create": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "node backend/server.js",
     "server": "env-cmd -f ../dev.env node backend/server.js",
     "mongodb": "C:/Users/teodo/mongodb/bin/mongod.exe --dbpath=C:/Users/teodo/mongodb-heroes",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd ./ && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix app && npm run build --prefix app"
   },
   "eslintConfig": {
     "extends": "react-app"
