--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "redux": "^4.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cd ./backend && node server.js",
+    "dev": "react-scripts start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "server": "env-cmd -f ../dev.env node backend/server.js",
-    "mongodb": "C:/Users/teodo/mongodb/bin/mongod.exe --dbpath=C:/Users/teodo/mongodb-heroes"
+    "mongodb": "C:/Users/teodo/mongodb/bin/mongod.exe --dbpath=C:/Users/teodo/mongodb-heroes",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd ./ && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
